--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio - Home</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<!-- Navigation Section -->
+<nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+</nav>
+
+<!-- Main Content Section -->
+<section id="home">
+    <div class="welcome-message">
+        <h1>Welcome to My Portfolio</h1>
+        <p>Hi there! I'm [Your Name], a student at KSU. This portfolio showcases my journey, experiences, and skills.</p>
+        <p>Feel free to explore and learn more about me.</p>
+    </div>
+    
+    <!-- Add any additional content representing your time at KSU here -->
+</section>
+
+</body>
+</html>
 
