--- a/about.html
+++ b/about.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio - About</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<!-- Navigation Section -->
+<nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+</nav>
+
+<!-- Main Content Section -->
+<section id="about">
+    <div class="about-content">
+        <div class="about-image">
+            <img src="your-photo.jpg" alt="Your Name">
+        </div>
+        <div class="about-text">
+            <h2>About Me</h2>
+            <p>My name is [Your Name], and I'm currently a student at KSU. I have a passion for [Your Passion or Field of Study] and have been actively involved in [Any Relevant Activities or Clubs] during my time at KSU.</p>
+            <p>I have gained valuable experience in [Specific Skills or Experiences] and have a keen interest in [Your Goals or Aspirations]. My goal is to [Your Goal or Aspiration] and make a positive impact in [Your Field or Community].</p>
+            <p>Outside of academics, I enjoy [Your Hobbies or Interests] and love to [Any Additional Information About Yourself]. I'm excited to continue my journey and explore new opportunities.</p>
+        </div>
+    </div>
+</section>
+
+</body>
+</html>
 
