--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
 <section id="home">
     <div class="welcome-message">
         <h1>Welcome to My Portfolio</h1>
-        <p>Hi there! I'm [Your Name], a student at KSU. This portfolio showcases my journey, experiences, and skills.</p>
+        <p>Hello there! My name is Jacob Rogers, and I am a student at KSU. This portfolio highlights my experiences, abilities, and journey throughout college.</p>
         <p>Feel free to explore and learn more about me.</p>
     </div>
     
-    <!-- Add any additional content representing your time at KSU here -->
 </section>
 
 </body>
