--- a/about.html
+++ b/about.html
@@ -25,9 +25,11 @@
         </div>
         <div class="about-text">
             <h2>About Me</h2>
-            <p>My name is [Your Name], and I'm currently a student at KSU. I have a passion for [Your Passion or Field of Study] and have been actively involved in [Any Relevant Activities or Clubs] during my time at KSU.</p>
-            <p>I have gained valuable experience in [Specific Skills or Experiences] and have a keen interest in [Your Goals or Aspirations]. My goal is to [Your Goal or Aspiration] and make a positive impact in [Your Field or Community].</p>
-            <p>Outside of academics, I enjoy [Your Hobbies or Interests] and love to [Any Additional Information About Yourself]. I'm excited to continue my journey and explore new opportunities.</p>
+            <p>My name is Jacob Rogers, I'm 21, and I'm currently a student at KSU. I am a Cybersecurity major with a minor in IT. I have a passion for Cybersecurity and have been enrolled here since August of 2020. I have not had any experience in the Cybersecurity field yet, but I love all things computers.</p>
+          
+            <p>While I was in high school, I had a surveying job. This helped me realize that blue-collar jobs were not for me. In 2021 I had a job for a tech company where I worked on refurbishing various electronics. This included Apple and Windows desktops, iPads, etc. In the summer of 2023, I had another warehouse job at an aerospace fabrication company. I enjoyed this job as I got to learn about airplane parts and even help make some of them.</p>
+           
+            <p>Outside of academics, I enjoy gaming and golfing. I used to be into mountain biking for many years, but I eventually grew out of that.  I'm excited to continue my journey in Cybersecurity and explore new opportunities.</p>
         </div>
     </div>
 </section>
