--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,10 @@
 <!-- Main Content Section -->
 <section id="contact">
     <h2>Contact Me</h2>
-    <p>Feel free to reach out to me using the form below:</p>
+    <p>Feel free to reach out to me via email:</p>
+
+    <!-- Email -->
+    <p>Email: jroge190@students.kennesaw.edu</p>
 
     <!-- Contact Form -->
     <form action="submit_form.php" method="post">
@@ -39,4 +42,3 @@
 
 </body>
 </html>
-
