--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 <section id="about">
     <div class="about-content">
         <div class="about-image">
-            <img src="your-photo.jpg" alt="Your Name">
+            <img src="hibachi pic.jpg" alt="Jacob Rogers">
         </div>
         <div class="about-text">
             <h2>About Me</h2>
